--- a/public/assets/anwal/style.css
+++ b/public/assets/anwal/style.css
@@ -143,6 +143,15 @@ input[type=email] {
 
 
 /* ==========================================================================
+   Smooth Scroll
+   ========================================================================== */
+
+html {
+    scroll-behavior: smooth;
+}
+
+
+/* ==========================================================================
    Bootstrap Custom
    ========================================================================== */
 
